objects/APTS_MSPA_Ref_Number__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Reference_Number__c</fullName>
        <inlineHelpText>Reference number to hold the SAP Reference for the MSPA</inlineHelpText>
        <label>Quotation Ref ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <description>This field is used to store current Year, Upon Change of Year Reference Number is refreshed.</description>
        <label>Current Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MSPA Ref Number</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Is_Used__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>MSPA Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSPA Ref Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>